--- a/ui/mods/section_of_foreign_intelligence/section_of_foreign_intelligence.html
+++ b/ui/mods/section_of_foreign_intelligence/section_of_foreign_intelligence.html
@@ -2,6 +2,12 @@
   <h3>Foreign Intelligence</h3>
   <ul data-bind="foreach: $root.foreign_intelligence">
     <li class="commander">
+      <div class="div_player_icon">
+        <div class="fill player_masked" data-bind="style: { backgroundColor: color }"></div>
+        <div class="outline">
+          <img src="coui://ui/main/game/live_game/img/players_list_panel/icon_player_outline.png" />
+        </div>
+      </div>
       <span class="commander-name" data-bind="text: name"></span><br>
       <span class="commander-evaluation" data-bind="text: evaluation"></span>
     </li>
