never released surface area, change title and tags, add icon

--- a/ui/mods/section_of_foreign_intelligence/section_of_foreign_intelligence.html
+++ b/ui/mods/section_of_foreign_intelligence/section_of_foreign_intelligence.html
@@ -1,5 +1,9 @@
 <div class="section_of_foreign_intelligence">
   <h3>Foreign Intelligence</h3>
+  <div class="surface-area">
+    Surface Area
+    <span class="area" data-bind="text: $root.systemSurfaceArea"></span>k<sup>2</sup>
+  </div><br>
   <ul data-bind="foreach: $root.foreign_intelligence">
     <li class="commander">
       <div class="div_player_icon">
